bynkc/tests/fixtures/negative/122_service_missing_from/src/svc.bynk
context svc

service api {
  on GET("/ping") () -> Effect[HttpResult[String]] by v: Visitor {
    Ok("pong")
  }
}
